updated link of explore

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_SERVER_URL=http://localhost:5000
 REACT_APP_APK_ENDPOINT=/api/apk
 REACT_APP_LINK_ENDPOINT=/api/link
 REACT_APP_UPLOAD_ENDPOINT=/api/upload
+REACT_APP_SOURCE_GRAPH_URL=http://localhost:7080/search
