--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_APK_ENDPOINT=/api/apk
 REACT_APP_LINK_ENDPOINT=/api/link
 REACT_APP_UPLOAD_ENDPOINT=/api/upload
 REACT_APP_DOWNLOAD_ENDPOINT=/api/download
+REACT_APP_CONFIGURATION_ENDPOINT=/api/configuration
