added function to get android links and filter

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_LINK_ENDPOINT=/api/link
 REACT_APP_UPLOAD_ENDPOINT=/api/upload
 REACT_APP_DOWNLOAD_ENDPOINT=/api/download
 REACT_APP_CONFIGURATION_ENDPOINT=/api/configuration
+REACT_APP_ANDROID_LINKS_ENDPOINT=/api/android
